ufw (0.26-0ubuntu1) UNRELEASED; urgency=low

  * new upstream release, which fixes:
    - formatting of dpkg output incorrect on upgrades (LP: #300726)
  * debian/control: Build-Depends on iptables (required for iptables version
    check)
  * added debian/watch
  * debian/control: add ${misc:Depends} to Depends and bump Standards-Version
    to 3.8.0
  * debian/source.lintian-overrides: don't complain about
    no-complete-debconf-translation

 -- Jamie Strandboge <jamie@ubuntu.com>  Wed, 24 Dec 2008 15:37:12 -0600

ufw (0.25-0ubuntu1) jaunty; urgency=low

  * new upstream release (no longer a native package)
    - fixes LP: #311066 (initscript flushes rules on stop when not enabled)
  * add debian/initscript.ubuntu since upstream doesn't ship an initscript
    anymore
  * dirs: add etc/init.d
  * debian/rules: install initscript.ubuntu, examples from doc/ and
    upstream changelogs

 -- Jamie Strandboge <jamie@ubuntu.com>  Mon, 22 Dec 2008 08:45:59 -0600

ufw (0.24.1) jaunty; urgency=low

  * remove existing stop links for runlevels 0 and 6, thus completing the fix
    for LP: #298736.
  * adjust tarball Makefile target

 -- Jamie Strandboge <jamie@ubuntu.com>  Sun, 21 Dec 2008 11:47:45 -0600

ufw (0.24) jaunty; urgency=low

  * debian/rules: check for 'nocheck' in DEB_BUILD_OPTIONS
  * debian/postrm: don't fail if iptables or ip6tables fails (LP: #278670)
  * fix typo in error message (LP: #280348)
  * allow case-insensitive matches for application rules (LP: #263757). Based
    on work by Didier Roche
  * add skel-ui for UI example
  * debian/postinst: don't stop in runlevels 0 and 6 (LP: #298736)
  * before6.rules: adjust hop limit to 255 for NDP messages (LP: #299268) per
    RFC 4890 secton 4.2. Thanks to Ryan Giobbi
  * before6.rules: restrict multicast (LP: #304216). Thanks to Ryan Giobbi
  * before.rules: don't use ctstate as it is not supported on all kernels and
    we don't use the extra information anyway (LP: #289906)