@@ -1,4 +1,5 @@
 etc/init.d
 etc/ufw
+usr/share/doc/ufw
 usr/share/ufw
 var/lib/ufw
