@@ -1,4 +1,4 @@
-.TH UFW: "4" "January 2009" "" ""
+.TH UFW: "8" "January 2009" "" ""
 
 .SH NAME
 ufw \- program for managing a netfilter firewall
