@@ -2,13 +2,14 @@ ufw (0.26-0ubuntu1) UNRELEASED; urgency=low
 
   * new upstream release, which fixes:
     - formatting of dpkg output incorrect on upgrades (LP: #300726)
-  * debian/control: Build-Depends on iptables (required for iptables version
-    check)
+  * debian/control: Build-Depends-Indep on iptables (required for iptables
+    version check)
   * added debian/watch
   * debian/control: add ${misc:Depends} to Depends and bump Standards-Version
     to 3.8.0
   * debian/source.lintian-overrides: don't complain about
     no-complete-debconf-translation
+  * debian/rules: rename and gzip upstream changelogs
 
  -- Jamie Strandboge <jamie@ubuntu.com>  Wed, 24 Dec 2008 15:37:12 -0600
 
